add_subdirectory(vkAcquireNextImageKHR_test)
add_subdirectory(vkGetDeviceQueue_test)
add_subdirectory(vkGetDeviceMemoryCommitment_test)
add_subdirectory(vkGetImageSubresourceLayout_test)
add_subdirectory(vkGetPipelineCacheData_test)
add_subdirectory(vkGetQueryPoolResults_test)
add_subdirectory(vkGetSwapchainImagesKHR_test)
